--- a/package.json
+++ b/package.json
@@ -1,22 +1,36 @@
 {
-  "name": "tedx-app",
+  "name": "tedx-backend",
   "version": "1.0.0",
-  "description": "TEDx DYP Akurdi React/Parcel/Tailwind project",
+  "description": "TEDx backend API",
+  "private": true,
+  "type": "commonjs",
+  "main": "api/server.js",
   "scripts": {
-    "start": "parcel index.html"
+    "start": "node api/server.js",
+    "dev": "nodemon api/server.js",
+    "health": "node -e \"require('http').get(process.env.SELF_URL + '/health',()=>process.exit(0)).on('error',()=>process.exit(1))\""
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
-    "@studio-freight/lenis": "^1.0.42",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "googleapis": "^157.0.0",
+    "mongoose": "^8.18.0",
+    "morgan": "^1.10.1",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.10.1",
+    "pdfkit": "^0.15.2",
+    "qrcode": "^1.5.4",
+    "razorpay": "^2.9.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
-    "autoprefixer": "^10.4.21",
-    "parcel": "^2.15.4",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
-  }
+    "nodemon": "^3.1.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
