--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "googleapis": "^157.0.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.15.2",
     "qrcode": "^1.5.4",
